css/styles.css
body {
    background-color: #000000;
    font-family: 'Roobert', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    text-align: center;
}

canvas, img {
    margin: 0 0.25rem 0 0;
    image-rendering: auto;
    -ms-interpolation-mode: nearest-neighbor
}

.choose-button-wrapper {
    margin: 0 1rem;
    overflow: hidden;
    position: relative;
    display: inline-block;
}

.choose-button {
    color: #ffffff;
    background-color: #9446ff;
    border-radius: 0;
    border-top: none;
    border-right: none;
    border-left: solid 4px #6441a5;
    border-bottom: solid 4px #6441a5;
    font-size: 1rem;
    font-weight: normal;
    padding: 1rem 2rem;
}

.choose-button-wrapper input[type=file] {
    font-size: 2rem;
    position: absolute;
    left: 0;
    top: 0;
    opacity: 0;
}

.description {
    color: #fff;
    display: block;
    margin-left: auto;
    margin-right: auto;
    text-align: justify;
    width: 600px;
}

.github-link {
    color: #6699ff;
    display: block;
    font-size: 1.4rem;
    margin-left: auto;
    margin-right: auto;
    text-align: left;
    width: 600px;
}

.header {
    color: #9446ff;
}

.images {
    margin: 0;
    display: inline-block;
}

.image-set {
    margin: 1rem 4rem 1rem 4rem;
}

.images-wrapper {
    margin: 1rem 0;
    display: block;
}

.logo {
    margin: 0 1rem 0 1rem;
}

.options-wrapper {
    background-color: #000000;
    padding: 1rem;
    position: sticky;
    top: 0;
}

.tabcontent {
    display: none;
    color: #ffffff;
}

